@@ -15,38 +15,45 @@ import java.io.BufferedWriter;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Objects;
 
 public final class WebCrawlerMain {
 
-  private final CrawlerConfiguration config;
+	private final CrawlerConfiguration config;
+	@Inject
+	private WebCrawler crawler;
+	@Inject
+	private Profiler profiler;
 
-  private WebCrawlerMain(CrawlerConfiguration config) {
-    this.config = Objects.requireNonNull(config);
-  }
+	private WebCrawlerMain(CrawlerConfiguration config) {
+		this.config = Objects.requireNonNull(config);
+	}
 
-  @Inject
-  private WebCrawler crawler;
+	public static void main(String[] args) throws Exception {
+		if (args.length != 1) {
+			System.out.println("Usage: WebCrawlerMain [starting-url]");
+			return;
+		}
 
-  @Inject
-  private Profiler profiler;
+		CrawlerConfiguration config = new ConfigurationLoader(Path.of(args[0])).load();
+		new WebCrawlerMain(config).run();
+	}
 
-  private void run() throws Exception {
-    Guice.createInjector(new WebCrawlerModule(config), new ProfilerModule()).injectMembers(this);
+	private void run() throws Exception {
+		Guice.createInjector(new WebCrawlerModule(config), new ProfilerModule()).injectMembers(this);
 
-    CrawlResult result = crawler.crawl(config.getStartPages());
-    CrawlResultWriter resultWriter = new CrawlResultWriter(result);
-    // TODO: Write the crawl results to a JSON file (or System.out if the file name is empty)
-    // TODO: Write the profile data to a text file (or System.out if the file name is empty)
-  }
-
-  public static void main(String[] args) throws Exception {
-    if (args.length != 1) {
-      System.out.println("Usage: WebCrawlerMain [starting-url]");
-      return;
-    }
-
-    CrawlerConfiguration config = new ConfigurationLoader(Path.of(args[0])).load();
-    new WebCrawlerMain(config).run();
-  }
+		CrawlResult result = crawler.crawl(config.getStartPages());
+		CrawlResultWriter resultWriter = new CrawlResultWriter(result);
+		// TODO: Write the crawl results to a JSON file (or System.out if the file name is empty)
+		String resultPath = config.getResultPath();
+		if (!resultPath.isEmpty()) {
+			Path path = Paths.get(resultPath);
+			resultWriter.write(path);
+		} else {
+			Writer writer = new OutputStreamWriter(System.out);
+			resultWriter.write(writer);
+		}
+		// TODO: Write the profile data to a text file (or System.out if the file name is empty)
+	}
 }
